SDSS-1202 | @jdwjdwjdw | Fixup news teasers (#367)
* Fixup green background color news teasers

* Update news vertical teaser

* Update news teasers and lists

* Remove commented out code

* SDSS-1204--distorted-square-img

* SDSS-1204: fixup news teaser breakpoint

* Update dist

* Increase underline thickness

* Update underline thickness, update news card link icons

* Fixup underline thickness

* Update dist

--- a/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/news/_news-list.scss
+++ b/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/news/_news-list.scss
@@ -8,10 +8,14 @@
 
       text-decoration: none;
 
-      &:hover {
-        >h2 {
-          color: $sdss-color-black;
-        }
+      &:focus,
+      &:hover,
+      &:active {
+        text-decoration-thickness: 2px;
+      }
+
+      h2 {
+        color: unset;
       }
     }
   }
