--- a/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/news/_news.scss
+++ b/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/news/_news.scss
@@ -23,14 +23,8 @@
 
 // News list with Green row variant.
 .layout-paragraphs-sdss-bgcolor--green {
-  h2 {
-    color: $sdss-color-white;
-  }
 
   .su-news-list {
-    h2 {
-      color: $sdss-color-white;
-    }
 
     .su-news-list__headline-dek {
       a {
@@ -44,10 +38,6 @@
         &:focus,
         &:active {
           color: $sdss-color-green-bright;
-
-          > h2 {
-            color: $sdss-color-green-bright;
-          }
 
           &::after {
             background-color: $sdss-color-green-bright;
@@ -76,10 +66,6 @@
         &:active {
           color: $sdss-color-green-bright;
 
-          > h2 {
-            color: $sdss-color-green-bright;
-          }
-
           &::after {
             background-color: $sdss-color-green-bright;
           }
@@ -88,10 +74,23 @@
     }
   }
 
-  .su-list-unstyled .su-card.su-news-vertical-teaser {
-    .su-news-vertical-teaser__link {
-        h2 {
-        @include link--action;
+  .su-card.su-news-vertical-teaser {
+    .su-content__wrapper {
+      .su-news-vertical-teaser__link {
+
+        &:not(.su-link--external) {
+          &::after {
+            background-color: $sdss-color-white;
+          }
+
+          &:focus,
+          &:hover,
+          &:active {
+            &::after {
+              background-color:  $sdss-color-green-bright;
+            }
+          }
+        }
 
         color: $sdss-color-white;
 
@@ -110,60 +109,18 @@
           }
         }
       }
-    }
-
-    .news-vertical-teaser__topics {
-      a {
-        color: $sdss-color-white;
-
-        &::after {
-          background-color: $sdss-color-white;
-        }
-
-        &:focus,
-        &:hover,
-        &:active {
-          color:  $sdss-color-white;
-        }
-      }
-    }
-  }
-
-  .su-news-vertical-teaser {
-    &.su-card {
-      .su-link,
-      .su-news-vertical-teaser__link {
-        color: $sdss-color-green-bright;
-
-        &::after {
-          background-color: $sdss-color-green-bright;
-        }
-
-        &:focus,
-        &:hover,
-        &:active {
-          color: $sdss-color-white;
-          text-decoration: unset;
-
-          &::after {
-            background-color: $sdss-color-white;
-          }
-        }
-      }
 
       .news-vertical-teaser__source {
         color: $sdss-color-white;
       }
 
       .news-vertical-teaser__topics {
-
         a {
           color: $sdss-color-white;
-
+  
           &:focus,
           &:hover,
           &:active {
-            color: $sdss-color-white;
             text-decoration: underline;
           }
         }
